# Spec

./: .gitignore  Cargo.toml  DATABASE_QUICKSTART.md  DATABASE_REFACTORING.md  Dioxus.toml  MIGRATION_GUIDE.md  README.md  REORGANIZATION_COMPLETE.md  project.md  tailwind.css  windows.db-shm  windows.db-wal
assets/: default.exe.txt  main.css  tailwind.css
assets/icons/: 7zg-61aa5d9914895ede.txt  Code.exe.txt  Hiddify.exe.txt  autoruns-b7f5ea8391b9748d.txt  chrome-da76bff1b19fb376.txt  cs2-da89ab56ec898a32.txt  explorer-e4949ba30003ef7e.txt  factorio-8e996f1a54b0362f.txt  filu-5ef2a86dbc72f7ae.txt  githubdesktop-408c8aa0c3346a7c.txt  msedgewebview2-7df8aa859e7385a9.txt  qbittorrent-bcb1dafa71a88643.txt  snippingtool-459d0716a71e9ba4.txt  steamwebhelper-acb5842f2cb5eda6.txt  telegram-0d84864c1649fa0d.txt  tslgame-41afc8f58cfe8b07.txt  ui32-1a7dd53edf9cd803.txt  uni-67d8b38bd6f155de.txt  windowsterminal-49a4fc53e4800582.txt  zen-cd9d0eaf814c0ea1.txt
src/: config.rs  main.rs
src/core/: mod.rs
src/core/database/: database.rs  examples.rs  migrations.rs  mod.rs  schema.rs
src/core/database/repositories/: event_repo.rs  goal_repo.rs  job_repo.rs  mod.rs  tag_repo.rs  window_repo.rs
src/core/model/: events.rs  goal.rs  job.rs  mod.rs  tag.rs  tag_templates.rs  window.rs
src/core/tracker/: mod.rs  tracker.rs
src/core/tray/: tray.rs
src/core/window/: mod.rs  window.rs
src/lib/: autostart.rs  browser_url.rs  color.rs  cron.rs  events.rs  icons.rs  mod.rs  segment.rs  stats.rs  store.rs  time.rs  window.rs
src/ui/: mod.rs
src/ui/app/: mod.rs  root.rs  router.rs
src/ui/components/: mod.rs
src/ui/components/color/: ColorPicker.rs  mod.rs
src/ui/components/events/: EvensTimeline.rs  EvensWeek.rs  EventElement.rs  EventsCalendar.rs  EventsCharts.rs  EventsList.rs  EventsStats.rs  EventsTimeline.rs  EventsWeek.rs  event_element.rs  events_calendar.rs  events_charts.rs  events_list.rs  events_stats.rs  events_timeline.rs  events_week.rs  mod.rs
src/ui/components/forms/: JobForm.rs  goal_form.rs  job_form.rs  mod.rs  tag_form.rs
src/ui/components/modal/: JobFormModal.rs  job_form_modal.rs  job_modal.rs  mod.rs  stats_modal.rs  tag_modal.rs
src/ui/components/tag/: tag_element.rs
src/ui/components/time/: TimeInput.rs  mod.rs  time_input.rs
src/ui/components/timeline/: mod.rs  (+3 more)
src/ui/config/: database.rs
src/ui/context/: alert.rs  app.rs  db.rs  event_bus.rs  mod.rs  settings.rs  toast.rs
src/ui/layout/: header.rs  layout.rs  mod.rs  navigate.rs
src/ui/pages/: main.rs  mod.rs  settings.rs  statistics.rs
src/ui/widget/: mod.rs
(+34 files in other folders)
