[package]
name = "spec"
version = "0.1.0"
authors = ["Maksim Ivanov <yura22875@yandex.ru>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.44"
crossbeam-channel = "0.5.15"
dioxus = { version = "0.7.1", features = [] }
once_cell = "1.21.4"
rusqlite = { version = "0.39.0", features = ["bundled"] }
tokio = "1.52.0"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_UI_Input",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell"
]}
image = "0.25"
base64 = "0.22"



[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
