[package]
name = "spec"
version = "0.1.0"
authors = ["Maksim Ivanov <yura22875@yandex.ru>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.44"
crossbeam-channel = "0.5.15"
dioxus = { version = "0.7.1", features = [] }
once_cell = "1.21.4"
rusqlite = { version = "0.39.0", features = ["bundled"] }
tokio = "1.52.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.15"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_UI_Input",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell"
]}
image = { version = "0.25", default-features = false, features = [
    "png"
] }
base64 = "0.22"
regex = "1.11"
dioxus-signals = "0.7.4"
dioxus-free-icons = { version = "0.10.0", features = ["lucide"] }
auto-launch = "0.6.0"
directories = "6.0.0"
rusqlite_migration = "2.5.0"
web-sys = "0.3.98"
browser-url = "0.1.1"
color-thief = "0.2.2"
palette = "0.7.6"
[dependencies.uuid]
version = "1.23.2"
features = [
    "v4",
]



[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]


[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
incremental = false
